--- a/packages/nocterm_web/example/pubspec.yaml
+++ b/packages/nocterm_web/example/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.0.0
 # repository: https://github.com/my_org/my_repo
 
 environment:
-  sdk: ^3.9.0
+  sdk: ">=3.0.0 <4.0.0"
 
 # Add regular dependencies here.
 dependencies:
@@ -13,5 +13,5 @@ dependencies:
     path: ../../../
 
 dev_dependencies:
-  lints: ^6.0.0
+  lints: ^5.1.1
   test: ^1.25.6
