--- a/packages/nocterm_web/pubspec.yaml
+++ b/packages/nocterm_web/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.2
+  sdk: ">=3.0.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -42,6 +42,9 @@ dependencies:
   # nocterm core package
   nocterm:
     path: ../../
+
+  # Web APIs for dynamic script injection
+  web: ^1.0.0
 
 dev_dependencies:
   flutter_test:
